--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <h1 id="mainText">Aman, will you be my Valentine?</h1>
 
-    <img id="mainImage" src="muntaha.staring.jpg" alt="Please say yes">
+    <img id="mainImage" src="muntaha.staring.jpg">
 
     <div class="buttons" id="btnContainer">
         <button id="yesBtn" onclick="nextStage()">YES</button>
